[package]
name = "rsx"
version = "1.0.0"
authors = ["bwiglesworth"]
description = "A lightweight framework for building server-side rendered React-like components in Rust"
license = "MIT"
repository = "https://github.com/bwiglesworth/rsx"
documentation = "https://docs.rs/rsx"
keywords = ["web", "framework", "components", "server-side-rendering", "react"]
categories = ["web-programming"]
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
walkdir = "2.4.0"
image = "0.24"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }

[[example]]
name = "basic-website"
path = "examples/basic-website/main.rs"

[[bin]]
name = "generate_logo"
path = "examples/basic-website/tools/generate_logo.rs"